--- a/alembic.ini
+++ b/alembic.ini
@@ -84,8 +84,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = postgresql://postgres:password123@localhost:5433/library_db
-
+sqlalchemy.url = driver://user:pass@localhost/dbname
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
