--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,9 +29,11 @@ services:
       - .env
     environment:
       DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+    ports:
+      - "8000:8000"
     volumes:
       - .:/app
-    command: tail -f /dev/null
+    command: uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload
   
 volumes:
   db_data:
